--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,8 +21,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(path: ':searchablespinnerlibrary')
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:23.4.0'
-    implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
 //    compile project(':searchablespinnerlibrary')
 }
